Add GameCube link and image to other sites section

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     <div class="other-sites">
       <a href="https://srb2.org"><img src="https://maril.dev/graphics/buttons/srb2.gif" alt="https://srb2.org"></a>
       <a href="https://weather.com"><img src="https://maril.dev/graphics/buttons/weather.gif" alt="https://weather.com"></a>
+      <a href="https://www.nintendo.com/en-gb/Hardware/Nintendo-History/Nintendo-GameCube/Nintendo-GameCube-627129.html"><img src="https://maril.dev/graphics/buttons/gamecube.gif" alt="https://www.nintendo.com/en-gb/Hardware/Nintendo-History/Nintendo-GameCube/Nintendo-GameCube-627129.html"></a>
     </div>
 
     <div class="copyright">
