--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
       <a href="https://srb2.org"><img src="https://maril.dev/graphics/buttons/srb2.gif" alt="https://srb2.org"></a>
       <a href="https://weather.com"><img src="https://maril.dev/graphics/buttons/weather.gif" alt="https://weather.com"></a>
       <a href="https://www.nintendo.com/en-gb/Hardware/Nintendo-History/Nintendo-GameCube/Nintendo-GameCube-627129.html"><img src="https://maril.dev/graphics/buttons/gamecube.gif" alt="https://www.nintendo.com/en-gb/Hardware/Nintendo-History/Nintendo-GameCube/Nintendo-GameCube-627129.html"></a>
+      <a href="https://www.cavestory.org/downloads/cavestoryen.zip"><img src="https://maril.dev/graphics/buttons/cavestory.gif" alt="https://www.cavestory.org/downloads/cavestoryen.zip"></a>
     </div>
 
     <div class="copyright">
