--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       <a href="https://www.nintendo.com/en-gb/Hardware/Nintendo-History/Nintendo-GameCube/Nintendo-GameCube-627129.html"><img src="https://maril.dev/graphics/buttons/gamecube.gif" alt="https://www.nintendo.com/en-gb/Hardware/Nintendo-History/Nintendo-GameCube/Nintendo-GameCube-627129.html"></a>
       <a href="https://www.cavestory.org/downloads/cavestoryen.zip"><img src="https://maril.dev/graphics/buttons/cavestory.gif" alt="https://www.cavestory.org/downloads/cavestoryen.zip"></a>
     </div>
-    <p class="button-disclaimer">All buttons by Marilyn Nozomi. All intellectual property belongs to their original creators.</p>
+    <p class="button-disclaimer">All buttons by Marilyn Nozomi. All intellectual property belongs to their owners.</p>
 
     <div class="copyright">
       <p>
