Add Open Graph meta tags to index.html

--- a/index.html
+++ b/index.html
@@ -1,6 +1,13 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <meta property="og:title" content="Marilyn's Webilyn" />
+		<meta property="og:type" content="website" />
+		<meta property="og:url" content="https://maril.dev" />
+		<meta property="og:image" content="https://maril.dev/graphics/title.gif" />
+		<meta property="og:description" content="Future home of Marilyn's Webilyn." />
+		<meta name="theme-color" content="#FFCFCF">
+    
     <title>Marilyn's Webilyn</title>
     <link rel="stylesheet" href="https://maril.dev/css/index.css">
   </head>
