Change stylesheet and link URLs to HTTP
Updated stylesheet and link URLs from HTTPS to HTTP.

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 		<meta name="theme-color" content="#FFCFCF">
     
     <title>Marilyn's Webilyn</title>
-    <link rel="stylesheet" href="https://maril.dev/css/index.css">
+    <link rel="stylesheet" href="http://maril.dev/css/index.css">
   </head>
 
   <body>
@@ -23,10 +23,10 @@
     </div>
     
     <div class="other-sites">
-      <a href="https://srb2.org"><img src="https://maril.dev/graphics/buttons/srb2.gif" alt="https://srb2.org"></a>
-      <a href="https://weather.com"><img src="http://maril.dev/graphics/buttons/weather.gif" alt="https://weather.com"></a>
-      <a href="https://www.nintendo.com/en-gb/Hardware/Nintendo-History/Nintendo-GameCube/Nintendo-GameCube-627129.html"><img src="http://maril.dev/graphics/buttons/gamecube.gif" alt="https://www.nintendo.com/en-gb/Hardware/Nintendo-History/Nintendo-GameCube/Nintendo-GameCube-627129.html"></a>
-      <a href="https://www.cavestory.org/downloads/cavestoryen.zip"><img src="http://maril.dev/graphics/buttons/cavestory.gif" alt="https://www.cavestory.org/downloads/cavestoryen.zip"></a>
+      <a href="http://srb2.org"><img src="https://maril.dev/graphics/buttons/srb2.gif" alt="http://srb2.org"></a>
+      <a href="http://weather.com"><img src="http://maril.dev/graphics/buttons/weather.gif" alt="http://weather.com"></a>
+      <a href="http://www.nintendo.com/en-gb/Hardware/Nintendo-History/Nintendo-GameCube/Nintendo-GameCube-627129.html"><img src="http://maril.dev/graphics/buttons/gamecube.gif" alt="http://www.nintendo.com/en-gb/Hardware/Nintendo-History/Nintendo-GameCube/Nintendo-GameCube-627129.html"></a>
+      <a href="http://www.cavestory.org/downloads/cavestoryen.zip"><img src="http://maril.dev/graphics/buttons/cavestory.gif" alt="http://www.cavestory.org/downloads/cavestoryen.zip"></a>
     </div>
     <p class="button-disclaimer">All buttons by Marilyn Nozomi. All intellectual property belongs to their owners.</p>
 
