Add update about Contacts page availability
Added an update about the new Contacts page with a link.

--- a/index.html
+++ b/index.html
@@ -20,6 +20,10 @@
         Future home of Marilyn's Webilyn.<br>
         In the meantime, check out the sites below.
       </p>
+
+	  <p style="font-size: 11px;">
+		<span style="color:yellow;">UPDATE:</span> Contacts page now available @ <a href="https://contacts.maril.dev">https://contacts.maril.dev</a>!
+	  </p>
     </div>
     
     <div class="other-sites">
